--- a/back/config/config.json
+++ b/back/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "subwoofer",
-    "database": "work",
+    "password": "Ines@260610",
+    "database": "test",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
