--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cars": "^1.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2"
