remise à jour des packages.json

--- a/back/package.json
+++ b/back/package.json
@@ -1,7 +1,6 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.0.2",
+    "node-modules": "^1.0.1",
     "sequelize": "^5.21.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
