--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-slick": "^0.25.2",
     "react-star-rating-component": "^1.4.1",
     "reactstrap": "^8.1.1"
   },
