--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.0.2",
     "node-modules": "^1.0.1",
+    "nodemon": "^2.0.2",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {},
