--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "react-star-rating-component": "^1.4.1",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
