ajout date europeenne en input de mission

--- a/back/config/config.json
+++ b/back/config/config.json
@@ -5,6 +5,7 @@
     "database": "neoworker",
     "host": "127.0.0.1",
     "dialect": "mysql",
+    "timezone": "Europe/Warsaw",
     "operatorsAliases": false
   },
   "test": {
