--- a/back/config/config.json
+++ b/back/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Amnesia13",
+    "password": "password",
     "database": "neoworker",
     "host": "127.0.0.1",
     "dialect": "mysql",
