creation du datamanagement, fichier qui gère toute les nuits un refresh des missions finies

--- a/back/config/config.json
+++ b/back/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Amnesia13",
+    "password": "textex82",
     "database": "neoworker",
     "host": "127.0.0.1",
     "dialect": "mysql",
