--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "node-modules": "^1.0.1",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.2"
   },
