--- a/back/config/config.json
+++ b/back/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
-    "database": "neoworker",
+    "password": "stevieCutman",
+    "database": "neowork",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "timezone": "Europe/Warsaw",
